Remove act_as_product? in Service
And use provider_can_use?(:api_as_product)

--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -7,10 +7,7 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
 
     dl.u-dl
       - unless deployment_option_is_service_mesh?(@service)
-        - if @service.act_as_traditional_service?
-          dt.u-dl-term Private Base URL
-          dd.u-dl-definition = @proxy.api_backend
-        - else
+        - if provider_can_use?(:api_as_product)
           - backend_api_configs = @service.backend_api_configs
           dt.u-dl-term Private Base #{'URL'.pluralize backend_api_configs.count}
           dd.u-dl-definition
@@ -20,6 +17,10 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
                 code
                   ' /#{backend_api_config.path.presence} =>
                 = backend_api_config.backend_api.private_endpoint
+        - else
+          dt.u-dl-term Private Base URL
+          dd.u-dl-definition = @proxy.api_backend
+
       dt.u-dl-term Mapping rules
       dd.u-dl-definition
         - if (last_rule = @proxy.proxy_rules.last)
