--- a/app/views/buyers/applications/new.html.erb
+++ b/app/views/buyers/applications/new.html.erb
@@ -19,8 +19,12 @@
                           :default_plan => @plans.respond_to?(:default) ? @plans.default : @plans.first %>
 
     <% if current_account.settings.service_plans.allowed? %>
-      <%= form.input :service_plan_id, as: :select, collection: [], label: ServicePlan.model_name.human,
-        hint: link_to('Create a service plan', admin_services_path, id: 'link-help-new-application-service') %>
+      <%= form.input :service_plan_id, as: :select,
+                                       collection: [],
+                                       label: ServicePlan.model_name.human,
+                                       hint: link_to('Create a service plan',
+                                       nil,
+                                       id: 'link-help-new-application-service') %>
     <% end %>
     <%= form.user_defined_form %>
   <% end %>
