[FIXME] We need to use current_account.provider_can_use?
For now, and not the helper otherwise it will make many tests fail

--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -7,7 +7,7 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
 
     dl.u-dl
       - unless deployment_option_is_service_mesh?(@service)
-        - if provider_can_use?(:api_as_product)
+        - if current_account.provider_can_use?(:api_as_product)
           - backend_api_configs = @service.backend_api_configs
           dt.u-dl-term Private Base #{'URL'.pluralize backend_api_configs.count}
           dd.u-dl-definition
