--- a/app/views/provider/admin/dashboards/show.html.slim
+++ b/app/views/provider/admin/dashboards/show.html.slim
@@ -2,29 +2,30 @@
   = stylesheet_link_tag 'vendor/c3'
 
 = content_for :javascripts do
+  = javascript_pack_tag 'PF4DashboardStyles'
   = javascript_pack_tag 'dashboard'
 
 .Dashboard
   div.Dashboard-widgets
     // account level
-    section#audience.DashboardSection.DashboardSection--audience class=('DashboardSection--wide' unless can?(:manage, :plans))
-      header.DashboardSection-header
-        h1.DashboardSection-title title="Audience"
-          i.fa.fa-bullseye>
-          | Audience
-        - if can?(:manage, :partners) || can?(:manage, :finance) || can?(:manage, :portal) || can?(:manage, :settings)
-          = render 'developers_navigation', buyers: current_account.buyer_accounts.not_master,
-                                          pending_buyers: current_account.buyers.pending,
-                                          account_plans: current_account.account_plans.not_custom,
-                                          forum_topics: current_account.forum.recent_topics,
-                                          unread_messages_presenter: @unread_messages_presenter,
-                                          applications: current_user.accessible_cinstances.not_bought_by(current_account),                                          
-                                          alerts: current_account.buyer_alerts.unread
-
-
-      // Account Level Widgets
-      = dashboard_widget :new_accounts if can?(:manage, :partners)
-      = dashboard_widget :potential_upgrades if can?(:manage, :plans)
+    section#audience.DashboardSection.DashboardSection--audience
+      .pf-c-card
+        .pf-c-card__header
+          h1.pf-c-title.pf-m-lg title="Audience"
+            i.fa.fa-bullseye>
+            | Audience
+          - if can?(:manage, :partners) || can?(:manage, :finance) || can?(:manage, :portal) || can?(:manage, :settings)
+            = render 'developers_navigation', buyers: current_account.buyer_accounts.not_master,
+                                            pending_buyers: current_account.buyers.pending,
+                                            account_plans: current_account.account_plans.not_custom,
+                                            forum_topics: current_account.forum.recent_topics,
+                                            unread_messages_presenter: @unread_messages_presenter,
+                                            applications: current_user.accessible_cinstances.not_bought_by(current_account),                                          
+                                            alerts: current_account.buyer_alerts.unread
+        // Account Level Widgets
+        .pf-c-card__body
+          = dashboard_widget :new_accounts if can?(:manage, :partners)
+          = dashboard_widget :potential_upgrades if can?(:manage, :plans)
 
     section#apis.DashboardSection.DashboardSection--services class=('DashboardSection--wide' unless can?(:manage, :plans))
       - unless current_user.accessible_services?
