--- a/app/views/provider/admin/dashboards/_developers_navigation.html.slim
+++ b/app/views/provider/admin/dashboards/_developers_navigation.html.slim
@@ -1,4 +1,4 @@
-nav.pf-c-nav
+nav.DashboardNavigation.pf-c-nav
   ul.DashboardNavigation-list.pf-c-nav__tertiary-list
     // Acounts, Pending Accounts & Account Plans
     - if can?(:manage, :partners)
