--- a/app/javascript/src/patternflyStyles/Dashboard.css
+++ b/app/javascript/src/patternflyStyles/Dashboard.css
@@ -1,4 +1,6 @@
 @import '~@patternfly/patternfly/patternfly-variables.css';
 @import '~@patternfly/patternfly/components/Card/card.css';
+@import '~@patternfly/patternfly/components/Table/table.css';
+@import '~@patternfly/patternfly/components/Table/table-grid.css';
 @import '~@patternfly/patternfly/components/Title/title.css';
 @import '~@patternfly/patternfly/components/Nav/nav.css';
