--- a/app/views/provider/admin/dashboards/_list_backends.html.slim
+++ b/app/views/provider/admin/dashboards/_list_backends.html.slim
@@ -1,23 +1,23 @@
 - backends = current_account.backend_apis
 
-table class='data'
+table class='pf-c-table pf-m-compact'
   thead
     tr
-      th Name
-      th In Use
-      th Methods
-      th Mapping Rules
+      th scope='col' Name
+      th scope='col' In Use
+      th scope='col' Methods
+      th scope='col' Mapping Rules
   tbody
     - backends.each do |backend|
       tr id=(dom_id backend)
-        td
+        td data-label='Name'
           = link_to backend.name, provider_admin_backend_api_path(backend)
-        td
+        td data-label='In Use'
           - if backend.services.any?
             i class='fa fa-check'
           - else
             i class='fa fa-times'
-        td
+        td data-label='Methods'
           = link_to pluralize(backend.method_metrics.size, 'Method'), provider_admin_backend_api_metrics_path(backend)
-        td
+        td data-label='Mapping Rules'
           = link_to pluralize(backend.mapping_rules.size, 'Mapping Rule'), provider_admin_backend_api_mapping_rules_path(backend)
