--- a/app/views/provider/admin/dashboards/_section_products_and_backends.html.slim
+++ b/app/views/provider/admin/dashboards/_section_products_and_backends.html.slim
@@ -1,12 +1,12 @@
 / TODO: workaround until backend_apis/new form is implemented
 - new_admin_backend_api_path = "backend_apis/new"
 
-header.DashboardSection-header.DashboardSection-header--extended
-  h1.DashboardSection-title
-    | APIs
+.pf-c-card__header
   = render 'apiap_navigation'  
+  h1.pf-c-title.pf-m-lg
+    | APIs
 
-div
+div.pf-c-card__body
   div.DashboardNavigation-tabs--content
     input#tab-products name='apiap-tabs' type='radio' checked='checked' autocomplete='off'
     div#products
