basics (need dry up)

--- a/app/assets/stylesheets/provider/admin/_dashboard.scss
+++ b/app/assets/stylesheets/provider/admin/_dashboard.scss
@@ -74,12 +74,14 @@
 }
 
 .DashboardWidget {
+  background-color: $body-background;
   width: 50%;
   float: left;
   position: relative;
   height: line-height-times(10);
   overflow: hidden;
-  border: $border-width solid $border-color;
+  //border: $border-width solid $border-color;
+  box-shadow: rgba(3, 3, 3, 0.2) 0px 1px 2px 0px;
   padding: line-height-times(1/2);
 
   .Dashboard-chart {
@@ -449,4 +451,3 @@ a:hover .u-notice {
     }
   }
 }
-
