[usage rules] Separated view and route
* Duplicated, but needed in order to get independence for method
settings
* In the future, we just adjust the cukes to Usage Rules instead of old
Settings, and we can safely remove the old settings
* Clean, no conditionals

--- a/app/views/api/services/usage_rules.html.slim
+++ b/app/views/api/services/usage_rules.html.slim
@@ -1,4 +1,5 @@
-- content_for :sublayout_title, 'Settings'
+- # TODO: When APIAP is default, adjust the old settings cukes to usage rules
+- content_for :sublayout_title, 'Usage Rules', flush: true
 
 - if (can? :manage, :service_plans) && !current_account.settings.service_plans_ui_visible?
   = form_tag polymorphic_path([:masterize, :admin, @service, ServicePlan]), :method => :post, :class => 'service autosubmit formtastic', :remote => true do
@@ -16,6 +17,6 @@
             p.inline-hints Please create a service plan first.
 
 = semantic_form_for @service, :url => admin_service_path(@service) do |form|
-  = render :partial => 'api/services/forms/settings', :locals => { :form => form }
+  = render :partial => 'api/services/forms/usage_rules', :locals => { :form => form }
   = form.buttons do
     = form.commit_button
