Fix redirect_url field in the proxy and backend_api/mapping rules
We currently have a bug in
app/views/shared/proxy_rules/_form.html.slim page. To render the
redirect_url field, it relies on the owner to check if it is
using proxy pro. But this caller to owner is invalid. Owner for
ProxyRule can be a Proxy or BackendApi, not the Service (which we
expect to call the using_proxy_pro method).

--- a/app/views/shared/proxy_rules/_table.html.slim
+++ b/app/views/shared/proxy_rules/_table.html.slim
@@ -3,7 +3,7 @@ table#mapping_rules.data
     tr
       th = sortable('proxy_rules.http_method', 'Verb')
       th = sortable('proxy_rules.pattern', 'Pattern')
-      - if owner.try(:using_proxy_pro?)
+      - if local_assigns[:include_redirect]
         th Redirect
       th title="increment" +
       th = sortable('metrics.friendly_name', 'Metric or Method')
@@ -20,7 +20,7 @@ table#mapping_rules.data
           = rule.pattern
           - if rule.pattern == '/'
             span.fa.fa-exclamation-triangle.disabled#catch-all-warning title=(t('api.integrations.proxy.proxy_rule_catch_all_warning'))
-        - if owner.try(:using_proxy_pro?)
+        - if local_assigns[:include_redirect]
           td.redirect_url
             = rule.redirect_url
         td.delta
