--- a/app/views/api/proxy_rules/new.html.slim
+++ b/app/views/api/proxy_rules/new.html.slim
@@ -1,4 +1,5 @@
 = content_for :sublayout_title, 'New Mapping Rule'
 
 = semantic_form_for @proxy_rule, url: admin_service_proxy_rules_path(@service) do |form|
-  = render 'shared/proxy_rules/form', form: form, proxy_rule: @proxy_rule, metrics: @service.metrics
+  = render 'shared/proxy_rules/form', form: form, proxy_rule: @proxy_rule, metrics: @service.metrics,
+                                      include_redirect: @service.using_proxy_pro?
