--- a/app/views/shared/proxy_rules/_form.html.slim
+++ b/app/views/shared/proxy_rules/_form.html.slim
@@ -1,7 +1,7 @@
 = form.inputs do
   = form.input :http_method, as: :select, collection: ProxyRule::ALLOWED_HTTP_METHODS, include_blank: false, label: 'Verb'
   = form.input :pattern
-  = form.input :redirect_url, as: :string if proxy_rule.owner.try(:using_proxy_pro?)
+  = form.input :redirect_url, as: :string if local_assigns[:include_redirect]
   = form.input :metric_id, as: :select, collection: metrics, include_blank: false, label: 'Metric or Method to increment'
   = form.input :delta, label: 'Increment by'
   = form.input :last, label: 'Last?'
