--- a/app/views/api/integrations/apicast/shared/_oidc.html.slim
+++ b/app/views/api/integrations/apicast/shared/_oidc.html.slim
@@ -5,3 +5,6 @@
   = f.semantic_fields_for :oidc_configuration do |config|
     - OIDCConfiguration::Config::FLOWS.each do |flow|
       = config.input flow, :as => :boolean
+= f.inputs "JWT Claim with ClientID" do |config|
+  = f.input :jwt_claim_with_client_id_type, include_blank: false, label: 'JWT Claim with ClientId Type', collection: GatewayConfiguration::JWT_CLAIM_WITH_CLIENT_ID_TYPES, as: :select
+  = f.input :jwt_claim_with_client_id, input_html: {placeholder: 'azp', value: f.object.jwt_claim_with_client_id.presence || 'azp'}, hint: true, label: 'JWT Claim with ClientID Location'
