Add Backend API config to product
Closes https://issues.jboss.org/browse/THREESCALE-3321

--- a/app/views/api/integrations/apicast/configuration_driven/_configuration.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_configuration.html.slim
@@ -31,7 +31,8 @@
                 th Production Public Base URL
                 th
                 th Private Base URL
-                th
+                th.actions
+                  = action_link_to :add, new_admin_service_backend_api_configs_path(@service), label: 'Add Backend API'
             tbody
               = f.fields_for :backend_api_configs do |backend|
                 - backend_api = backend.object.backend_api
