CRUD for backend api configs detached from proxy config page
Closes [THREESCALE-3472](https://issues.jboss.org/browse/THREESCALE-3472)

--- a/app/assets/stylesheets/provider/_tables.scss
+++ b/app/assets/stylesheets/provider/_tables.scss
@@ -262,7 +262,7 @@ table#metrics {
   }
 }
 
-table#mapping_rules {
+table#backend_api_configs,table#mapping_rules {
   tr th a, tr td.actions a {
     display: inline-block;
   }
