--- a/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
@@ -12,6 +12,7 @@
   li.pf-c-nav__item class='pf-m-expandable pf-m-expanded' class=('pf-m-current' if is_section_active)
     a.pf-c-nav__link href='#!'
       = title
+      i.fa.fa-exclamation-triangle
     section.pf-c-nav__subnav
       ul.pf-c-nav__simple-list
         - items.each do |item|
