--- a/app/assets/stylesheets/provider/admin/cms/_sidebar.scss
+++ b/app/assets/stylesheets/provider/admin/cms/_sidebar.scss
@@ -1,4 +1,5 @@
 #cms-sidebar {
+  background-color: $white;
   font-size: $caption-font-size;
   float: left;
   //overflow-x: hidden;
@@ -18,7 +19,14 @@
   }
 
   & + #tab-content {
+    background-color: $white;
+    padding: line-height-times(1);
     @include border-bottom-left-radius(0);
+
+    h1 {
+      background-color: transparent;
+    }
+
     &.sticked {
       overflow-y: auto;
       top: 24px !important;
