--- a/app/assets/stylesheets/provider/stats/_base.scss
+++ b/app/assets/stylesheets/provider/stats/_base.scss
@@ -1,5 +1,10 @@
 @import 'provider/typography'; // needed for dev portals that include this stylesheet directly
 
+.Stats {
+  background-color: $white;
+  padding: line-height-times(1)
+}
+
 .StatsMenu-container,
 .StatsMenuContainer,
 .StatsSelector-container,
