--- a/app/assets/stylesheets/provider/stats/_selector.scss
+++ b/app/assets/stylesheets/provider/stats/_selector.scss
@@ -75,7 +75,7 @@ $zindex-dropdown: 1000 !default;
 
   &-menu {
     background-clip: padding-box;
-    background-color: $dropdown-bg;
+    background-color: $white;
     border: $border-width solid $border-color;
     color: $body-color;
     display: none;
