--- a/app/assets/stylesheets/provider/_commons.scss
+++ b/app/assets/stylesheets/provider/_commons.scss
@@ -14,6 +14,19 @@ main >  h2,
   font-weight: $font-weight-light;
 }
 
+.subsubmenu + h1,
+.subsubmenu + h2,
+#subsubmenu + h1,
+#subsubmenu + h2,
+main > h1:first-child,
+main >  h2:first-child,
+#tab-content > h1:first-child,
+#tab-content > h2:first-child {
+  padding: line-height-times(1);
+  margin: line-height-times(-1);
+  margin-bottom: line-height-times(1);
+  background-color: $body-background;
+}
 
 h1 {
   font-size: $main-title-font-size;
@@ -30,13 +43,21 @@ h2, h3 {
   margin-bottom: line-height-times(1/2);
 }
 
+.subsubmenu {
+  padding: line-height-times(1);
+  margin: line-height-times(-1);
+  background-color: $body-background;
+}
+
 #tab-content > h2:first-child,
 #content > h2:first-child,
 #subsubmenu + h2 {
   font-size: $main-title-font-size;
-  padding-top: 0;
-  margin-bottom: line-height-times(1/2);
+  padding: line-height-times(1);
+  margin: line-height-times(-1);
+  margin-bottom: line-height-times(1);
   line-height: 1;
+  background-color: $body-background;
 }
 
 h2 {
@@ -55,7 +76,13 @@ h3 {
 
 p {
   margin: line-height-times(1/2) 0 line-height-times(1) 0;
-  max-width: line-height-times(36);
+}
+
+h1 + p,
+h2 + p {
+  padding: line-height-times(1);
+  margin-bottom: line-height-times(1);
+  background-color: $body-background;
 }
 
 dd p {
@@ -76,7 +103,6 @@ ul, p, ol, dl {
 
 p + ul {
   list-style: none;
-  margin-top: line-height-times(-2/3);
   padding-left: line-height-times(2/3);
 }
 
@@ -140,10 +166,6 @@ p + ul {
 
 a img {
   border: none;
-}
-
-.round, #page_templates, .alwaysontop {
-  @include border-radius($border-radius);
 }
 
 pre code {
