--- a/app/assets/stylesheets/provider/_patternfly_tabs_fake.scss
+++ b/app/assets/stylesheets/provider/_patternfly_tabs_fake.scss
@@ -60,6 +60,7 @@
         }
 
         .pf-c-tabs__button {
+          background-color: $white;
           color: rgb(0, 102, 204); //var(--pf-c-tabs__item--m-current--Color);
         }
 
@@ -114,7 +115,7 @@
  }
 
 .pf-tabs-header {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid transparent;
   float: right;
   line-height: line-height-times(1);
   position: relative;
@@ -125,6 +126,3 @@
   text-transform: uppercase;
 }
 
-.pf-c-tabs .pf-c-tabs__list .pf-c-tabs__item.pf-m-current .pf-c-tabs__button::before {
-  border-bottom: 1px solid white;
-}
