--- a/app/assets/stylesheets/provider/_pop_navigation.scss
+++ b/app/assets/stylesheets/provider/_pop_navigation.scss
@@ -8,6 +8,7 @@ $pf4-sidebar-width: 18.125rem;
     float: left;
 
     .PopNavigation-list {
+      background-color: $white;
       left: $pf4-sidebar-width;
       margin-left: line-height-times(1 / 2);
     }
