--- a/app/views/api/services/forms/_integration_settings_apiap.html.slim
+++ b/app/views/api/services/forms/_integration_settings_apiap.html.slim
@@ -18,3 +18,6 @@
             collection: BackendVersion.visible_versions(service: @service),
             value_as_class: true,
             label: false
+
+    = form.semantic_fields_for :proxy do |f|
+      = render 'api/services/forms/authentication_settings', f: f, oauth_hint: 'apicast_oauth'
