Rename without_service -> not_used_by

--- a/app/views/api/backend_api_configs/_form.html.slim
+++ b/app/views/api/backend_api_configs/_form.html.slim
@@ -2,7 +2,7 @@
   - persisted = @backend_api_config.persisted?
   = form.input :backend_api_id,
                 as: :select,
-                collection: current_account.backend_apis.without_service(@backend_api_config.service_id),
+                collection: current_account.backend_apis.not_used_by(@backend_api_config.service_id),
                 include_blank: false,
                 prompt: 'Select a Backend',
                 label: 'Backend',
