--- a/app/views/api/services/forms/_integration_settings_apiap.html.slim
+++ b/app/views/api/services/forms/_integration_settings_apiap.html.slim
@@ -1,6 +1,5 @@
 = javascript_pack_tag 'settings'
-
-- @service.deployment_option ||= 'hosted'
+- @service.deployment_option = 'hosted' if @service.deployment_option.blank?
 
 #settings
   = form.inputs 'Deployment', id: 'integration-wrapper' do
