--- a/app/views/provider/admin/backend_apis/edit.html.slim
+++ b/app/views/provider/admin/backend_apis/edit.html.slim
@@ -1,4 +1,4 @@
-h2 Backend API
+h2 Edit Backend
 
 = semantic_form_for @backend_api, url: provider_admin_backend_api_path(@backend_api) do |form|
   = render partial: 'provider/admin/backend_apis/forms/naming', locals: { form: form }
