--- a/app/views/provider/admin/backend_apis/metrics/index.html.slim
+++ b/app/views/provider/admin/backend_apis/metrics/index.html.slim
@@ -8,11 +8,11 @@
 section.Section.u-toggleableBySettingsBox data-state="open"
   h2 Methods
   p
-    ' Add the methods of this Backend API to get data on their individual usage once part of a Product. Method calls trigger the built-in Hits-metric. Usage limits and pricing rules for individual methods are defined under context of a Product Application Plan.
+    ' Add the methods of this Backend to get data on their individual usage once part of a Product. Method calls trigger the built-in Hits-metric. Usage limits and pricing rules for individual methods are defined under context of a Product Application Plan.
     ' .
     ' A method can be mapped to one or more URL patterns in the
     => link_to 'Mapping Rules', provider_admin_backend_api_mapping_rules_path(@backend_api)
-    ' of this Backend API.
+    ' of this Backend.
 
   table#methods.data class='u-sixEqualColumns'
     thead
@@ -62,7 +62,7 @@ section.Section.u-toggleableBySettingsBox data-state="open"
     ' <em>Hits</em> is the built-in metric to which all methods report. Additional top-level metrics can be added here in order to track other usage that shouldn't increase the hit count.
     ' A metric can be mapped to one or more URL patterns in the
     => link_to 'Mapping Rules', provider_admin_backend_api_mapping_rules_path(@backend_api)
-    ' of this Backend API
+    ' of this Backend
 
   table#metrics.data class='u-sixEqualColumns'
     thead
