--- a/app/views/provider/admin/backend_apis/show.html.slim
+++ b/app/views/provider/admin/backend_apis/show.html.slim
@@ -18,9 +18,9 @@ section class="service-widget"
   div.content-service
 
     section[name="settings"]
-      h2 Products Using this Backend API
+      h2 Products Using this Backend
       ul.application-plans
-        - list_items_or_empty @backend_api.services, 'No Product currently using this Backend API' do |service|
+        - list_items_or_empty @backend_api.services, 'No Product currently using this Backend' do |service|
           li.item
             = link_to service.name, admin_service_path(service)
 
